# cycling-app

./: .env.example  .gitignore  IDEA.md  README.md  pyproject.toml  requirements.txt  start_linux.sh  start_windows.bat
app/: auth.py  db.py  main.py  models.py  openai_import.py  route_math.py  secrets.py  supabase_db.py
scripts/: migrate_sqlite_to_supabase.py
static/: app.js  ftms-trainer.js  index.html  styles.css
supabase/migrations/: 202606100001_multi_user_schema.sql  202606170001_profile_ftp_settings.sql
tests/: test_activity_resume.py  test_auth_security.py  test_openai_import.py  test_route_math.py  test_settings.py
