[project]
name = "cycling-app"
version = "0.2.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi==0.124.4",
  "uvicorn[standard]==0.38.0",
  "python-multipart==0.0.20",
  "openai==2.14.0",
  "pydantic==2.12.5",
  "httpx==0.28.1",
  "cryptography==45.0.7",
]

[tool.vercel]
entrypoint = "app.main:app"
